feat: move user id to a env var

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_DOMAIN='https://trio-bike-rent-api.herokuapp.com/api'
 REACT_APP_BOILERPLATE_CANDIDATE_ID=29
 REACT_APP_BOILERPLATE_CANDIDATE_TOKEN=1dcaf303-b4a8-4826-a58f-67ef7cf115e3
+REACT_APP_BOILERPLATE_USER_ID=29
